// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubNav.Link renders consistently 1`] = `
.c1 {
  padding-left: 16px;
  padding-right: 16px;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  min-height: 34px;
  color: #1F2328;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-top: 1px solid #d0d7de;
  border-bottom: 1px solid #d0d7de;
  border-right: 1px solid #d0d7de;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover,
.c1:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f6f8fa;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
}

.c1:hover .SubNav-octicon,
.c1:focus .SubNav-octicon {
  color: #656d76;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:first-of-type .SubNav-link {
  border-top-left-radius: 6px;
  border-bottom-left-radius: 6px;
  border-left: 1px solid #d0d7de;
}

.c0:last-of-type .SubNav-link {
  border-top-right-radius: 6px;
  border-bottom-right-radius: 6px;
}

.c0 .SubNav-link.selected {
  color: #ffffff;
  background-color: #0969da;
  border-color: #0969da;
}

.c0 .SubNav-link.selected .SubNav-octicon {
  color: #ffffff;
}

<li
  className="c0 SubNav-item"
>
  <a
    className="c1 SubNav-item SubNav-link"
  />
</li>
`;

exports[`SubNav.Link respects the "selected" prop 1`] = `
.c1 {
  padding-left: 16px;
  padding-right: 16px;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  min-height: 34px;
  color: #1F2328;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-top: 1px solid #d0d7de;
  border-bottom: 1px solid #d0d7de;
  border-right: 1px solid #d0d7de;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover,
.c1:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f6f8fa;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
}

.c1:hover .SubNav-octicon,
.c1:focus .SubNav-octicon {
  color: #656d76;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:first-of-type .SubNav-link {
  border-top-left-radius: 6px;
  border-bottom-left-radius: 6px;
  border-left: 1px solid #d0d7de;
}

.c0:last-of-type .SubNav-link {
  border-top-right-radius: 6px;
  border-bottom-right-radius: 6px;
}

.c0 .SubNav-link.selected {
  color: #ffffff;
  background-color: #0969da;
  border-color: #0969da;
}

.c0 .SubNav-link.selected .SubNav-octicon {
  color: #ffffff;
}

<li
  className="c0 SubNav-item"
>
  <a
    className="c1 SubNav-item selected SubNav-link"
    selected={true}
  />
</li>
`;
